# temapoo3

./: .gitignore  CMakeLists.txt  EXPLICATII.md  INDEX.md  INSTRUCTIUNI_COMPILARE.md  README.md  SUMMARY.md  build.bat  build.sh  producer_consumer.txt  sync_demo.txt  test_raii.txt  unsafe_demo.txt
include/: Employee.hpp  Person.hpp  ResourceManager.hpp  SmartPointerDemo.hpp  ThreadingDemo.hpp  Widget.hpp
src/: Employee.cpp  Person.cpp  Widget.cpp  main.cpp
